--- a/myfirstrepository/index.html
+++ b/myfirstrepository/index.html
@@ -6,20 +6,20 @@
     <link rel="stylesheet" type="text/css" href="css/reset.css" />
     <link rel="stylesheet" type="text/css" href="css/style.css" />
 
-      <title></title>
+      <title>learning_git</title>
   </head>
       <body>
-        <h1></h1>
+        <h1>Git Lesson</h1>
           <nav>
             <ul>
               <li>
-                <a href=""></a>
+                <a href="">blah</a>
               </li>
               <li>
-                <a href=""></a>
+                <a href="">blah</a>
               </li>
               <li>
-                <a href=""></a>
+                <a href="">blah</a>
               </li>
             </ul>
           </nav>
