--- a/myfirstrepository/index.html
+++ b/myfirstrepository/index.html
@@ -10,6 +10,8 @@
   </head>
       <body>
         <h1>Git Lesson</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi vestibulum quam neque, eget vulputate orci viverra sed. Quisque lacinia ipsum vitae enim dignissim, quis tincidunt diam viverra. Duis diam neque, varius a hendrerit at, sagittis nec est. Donec rutrum molestie orci. Pellentesque tincidunt vitae ipsum dignissim tempor. Cras lobortis sit amet diam eget vehicula. Nam ultricies lobortis feugiat. Mauris et mauris nisi.
+        </p>
           <nav>
             <ul>
               <li>
